[package]
name = "consistent_hash"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.1", features = ["full", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"