[package]
name = "consistent_hash"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.1", features = ["full", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tonic = "0.13.0"
prost = "0.13.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.9.0"

[build-dependencies]
tonic-build = "0.13.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"